<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:id="@+id/change_activity_buttons">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculator"
            style="@style/changeActivityButtons"
            app:icon="@drawable/baseline_calculate_24"
            app:iconSize="25dp"
            app:iconTint="@color/text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exchange"
            style="@style/changeActivityButtons"
            android:onClick="changeActivity"
            app:icon="@drawable/baseline_currency_exchange_24"
            app:iconSize="25dp"
            app:iconTint="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textEnd"
        android:visibility="gone"
        android:textColor="@color/secondaryText"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:paddingVertical="16dp"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/Clear" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_backspace"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/text"
                android:text="@string/Backspace" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/modulo" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/divide" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_7" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_8" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/multiply" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_4" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_5" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_6" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_2" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_3" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:text="@string/minus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allClear"
                style="@style/operationButton"
                android:onClick="buttonClicked"
                android:textSize="21sp"
                android:text="@string/AllClear" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_0" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_."
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/comma" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/equalButton"
                android:onClick="buttonClicked"
                android:text="@string/equal" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>