<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExchangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:id="@+id/change_activity_buttons">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculator"
            style="@style/changeActivityButtons"
            android:onClick="changeActivity"
            app:icon="@drawable/baseline_calculate_24"
            app:iconSize="25dp"
            app:iconTint="@color/black" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exchange"
            style="@style/changeActivityButtons"
            app:icon="@drawable/baseline_currency_exchange_24"
            app:iconSize="25dp"
            app:iconTint="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchange_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_below="@+id/change_activity_buttons"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/spinner_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/text"
                android:textSize="40sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_swap"
            style="@style/swapExchangeButton"
            android:onClick="swapCurrencies"
            app:icon="@drawable/baseline_swap_vert_24"
            app:iconSize="35dp"
            app:iconTint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/spinner_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="15dp"
        android:id="@+id/buttons_layout"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_7" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_4" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_8" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_5" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_2" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_0" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_9" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_6" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/_3" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_."
                style="@style/digitButton"
                android:onClick="buttonClicked"
                android:text="@string/comma" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_AC"
                style="@style/operationButtonExchange"
                android:onClick="buttonClicked"
                android:textSize="21sp"
                android:text="@string/AllClear" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_backspace"
                style="@style/operationButtonExchange"
                android:onClick="buttonClicked"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/text"
                android:text="@string/Backspace" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>